cl-structs/tests/compile-fail/ocl_prm_derive_non_f32_test.rs
extern crate ocl;
#[macro_use]
extern crate cl_structs;

use ocl::OclPrm;

//~ ERROR: some error here?
#[derive(Debug, Copy, Clone, PartialEq, Default, OclPrm)]
struct U {
    a: f64,
    b: i32,
}

fn main() {

}
